--- a/client/style.css
+++ b/client/style.css
@@ -56,6 +56,10 @@ body .card .card-content .card-title {
     body .collection.with-header {
         margin: 1rem 0 0.5rem 0
     }
+
+    body .map, body > .row, .left-block  {
+        height: 50vh;
+    }
 }
 /*.table-card{*/
     /*height: calc(100vh - 255px);*/
